--- a/rust-part/Cargo.toml
+++ b/rust-part/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 axum = "0.8.8"
 tokio = { version = "1.49.0", features = ["full"]}
+axum-server = { version = "0.8.0", features = ["tls-rustls"] }
+rustls-pemfile = "2.2.0"
+rustls = "0.23.37"  #
