--- a/rust-part/Cargo.toml
+++ b/rust-part/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "rust-part"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 axum = "0.8.8"
 tokio = { version = "1.49.0", features = ["full"]}
 axum-server = { version = "0.8.0", features = ["tls-rustls"] }
 rustls-pemfile = "2.2.0"
-rustls = "0.23.37"  #
+rustls = "0.23.37"
+hickory-server = "0.25"
+hickory-proto = "0.25"
+anyhow = "1"   # for error handling
