dhcp anf https are working perfectly.

--- a/rust-part/Cargo.toml
+++ b/rust-part/Cargo.toml
@@ -12,3 +12,5 @@ rustls = "0.23.37"
 hickory-server = "0.25"
 hickory-proto = "0.25"
 anyhow = "1"   # for error handling
+dhcproto = "0.14"
+env_logger = "0.11.9"
